name:                validated
version:             0.1.0.0
synopsis:            A type for validation
description:         Please see README.md
homepage:            https://github.com/owainlewis/validated#readme
license:             BSD3
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
copyright:           2016 Owain Lewis
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Validated
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite validated-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , validated
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owainlewis/validated
